--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>My Team</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c502137733.js"></script>
 </head>
 
@@ -24,44 +24,57 @@
         <div class="row">
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
-                    <div class="card-header">
-                        <h2 class="card-title">Jim</h2>
-                        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
-                    </div>
-                    <div class="card-body">
-                        <ul class="list-group">
-                            <li class="list-group-item">ID: 234234</li>
-                            <li class="list-group-item">Email: <a href="mailto:cnsdn@gmail.com">cnsdn@gmail.com</a></li>
-                            <li class="list-group-item">Office number: 123</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="card employee-card">
-                    <div class="card-header">
-                        <h2 class="card-title">Shihan</h2>
-                        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-                    </div>
-                    <div class="card-body">
-                        <ul class="list-group">
-                            <li class="list-group-item">ID: 123</li>
-                            <li class="list-group-item">Email: <a href="mailto:corazhang0@gmail.com">corazhang0@gmail.com</a></li>
-                            <li class="list-group-item">GitHub: <a href="https://github.com/CoraZhang" target="_blank" rel="noopener noreferrer">CoraZhang</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="card employee-card">
-                    <div class="card-header">
-                        <h2 class="card-title">Sally</h2>
-                        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-                    </div>
-                    <div class="card-body">
-                        <ul class="list-group">
-                            <li class="list-group-item">ID: 32e</li>
-                            <li class="list-group-item">Email: <a href="mailto:corazhang0@gmail.com">corazhang0@gmail.com</a></li>
-                            <li class="list-group-item">School: U of T</li>
-                        </ul>
-                    </div>
-                </div>
+    <div class="card-header">
+        <h2 class="card-title">Ginny</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 234234</li>
+            <li class="list-group-item">Email: <a href="mailto:ginny22@gmail.com">ginny22@gmail.com</a></li>
+            <li class="list-group-item">Office number: 33445</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Shihan Zhang</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 334556</li>
+            <li class="list-group-item">Email: <a href="mailto:corazhang0@gmail.com">corazhang0@gmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/CoraZhang" target="_blank" rel="noopener noreferrer">CoraZhang</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Kim</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 757856</li>
+            <li class="list-group-item">Email: <a href="mailto:kim234@gmail.com">kim234@gmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/JimK" target="_blank" rel="noopener noreferrer">JimK</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Jimmy</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 23235</li>
+            <li class="list-group-item">Email: <a href="mailto:jimmy@gmail.com">jimmy@gmail.com</a></li>
+            <li class="list-group-item">School: U of T</li>
+        </ul>
+    </div>
+</div>
 
             </div>
         </div>
